<resources>

    <string name="app_name">Whirlpool</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_game">Game</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_loading">Loading</string>
    <string name="title_activity_cinematic">Cinematic</string>
    <string name="title_activity_tutorial">Tutorial</string>
    <string name="title_activity_credits">Credits</string>
    <string name="start_game">Start Game</string>
    <string name="options_screen">Options Screen</string>
    <string name="jake">Programmer: Jake Morey</string>
    <string name="fraser">Programmer: Fraser Tomison</string>
    <string name="lewis">Programmer: Lewis Shaw</string>
    <string name="connor">Programmer: Connor Nicol</string>
    <string name="jordan">Programmer: Jordan O’Hare</string>
    <string name="noah">Artist: Noah Ramanan</string>
    <string name="aiste">Artist: Aiste Surutkoviciute</string>
    <string name="allan">Audio Director: Allan Reid</string>
    <string name="irvine">Music Composer: Irvine Cruickshank</string>
    <string name="andrew">Producer/Designer: Andrew Duthie</string>
    <string name="exit">Exit</string>
</resources>